[gd_scene load_steps=2 format=3 uid="uid://ccl4io31kbi6j"]

[ext_resource type="Script" path="res://scripts/timer_ui.gd" id="1_a31kj"]

[node name="TimerUI" type="CanvasLayer"]
script = ExtResource("1_a31kj")

[node name="TimerContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_top = 27.0
offset_right = -30.0
offset_bottom = 104.0
grow_horizontal = 0

[node name="TimeLabel" type="Label" parent="TimerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1

[node name="BadgeLabel" type="Label" parent="TimerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Current: --"
horizontal_alignment = 1
